# tree_algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  first_tree_Borovik.cpp  funkcijas_tree.h
include/: funkcijas_tree.cpp  funkcijas_tree.h
src/: first_tree_Borovik.cpp
tests/: test_tree.cpp
